# pintora4typst

./: .gitignore  Cargo.toml  Justfile  build.rs  js2bc.c
js/: console.js  encoding.js  render.js
src/: lib.rs
tests/: test.typ  test_old.typ
typst-package/: pintora.wasm  typst.toml
