[package]
name = "rust-pintora"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
quickjs-wasm-rs = "3.1.0"
wasm-minimal-protocol = "0.1"

[build-dependencies]
cc = "1.0"
regex = "1"
quickjs-wasm-rs = "3.1.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
