[package]
name = "rust-pintora"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rquickjs = { version = "0.11", default-features = false }
wasm-minimal-protocol = "0.1"

[build-dependencies]
regex = "1"
rquickjs = { version = "0.11", default-features = false, features = ["classes", "macro"] }

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
