[package]
name = "rust-pintora"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rquickjs = { version = "0.11", default-features = false, features = ["classes", "macro"] }
wasm-minimal-protocol = "0.1"

[build-dependencies]
regex = "1"
rquickjs = { version = "0.11", default-features = false }

[profile.release]
lto = "fat"
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
